--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "ctctc-cli"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["erago"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm = "0.19"
+tui = { version = "0.15", default-features = false, features = ['crossterm'] }
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
-text_io = "0.1.8"
-ctrlc = "3.1.9"
