--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -53,7 +53,7 @@ jobs:
           toolchain: stable
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
-          bin: ctctc-cli-${{ matrix.append }}
+          bin: ctctc-cli
           target: ${{ matrix.target }}
           tar: all
           zip: windows
