--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ctctc-cli"
-version = "0.2.2"
+version = "0.3.0"
 authors = ["erago"]
 edition = "2018"
 
@@ -11,3 +11,4 @@ crossterm = "0.19"
 tui = { version = "0.15", default-features = false, features = ['crossterm'] }
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+json = "0.12"
